styles: fix overflow bug in placeholder of react-select component

--- a/src/modules/form/react-select/scss/styles.scss
+++ b/src/modules/form/react-select/scss/styles.scss
@@ -7,6 +7,9 @@
 	.pui-react-select__placeholder,
 	.pui-react-select__single-value {
 		color: var(--text-color);
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
 	}
 	// Adjusting the main container
 
