--- a/src/modules/interaction/tabs/scss/tab.scss
+++ b/src/modules/interaction/tabs/scss/tab.scss
@@ -1,6 +1,4 @@
 .tab {
-	padding-block: 1rem;
-	width: 100%;
 	padding: 1rem;
 	cursor: pointer;
 	background: var(--surface);
